fixing box height on mobile view

--- a/src/components/box/box.styles.scss
+++ b/src/components/box/box.styles.scss
@@ -14,7 +14,7 @@
   }
   @media only screen and (max-width: $bp-medium) {
     width: 100%;
-    height: 15rem;
+    height: 20rem;
     gap: 2rem;
   }
 
